# sandbox

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json  package.json  release.package.json  test.mjs  tsconfig.build.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  image-release-publish.yml  image-release-reconcile.yml  macos-notarization-complete.yml  release.yml
crates/sandbox/: Cargo.toml  build.rs
crates/sandbox-host/: Cargo.toml
crates/sandbox-host/src/: host_vfs.rs  main.rs
crates/sandbox-init/: Cargo.toml
crates/sandbox-init/src/: main.rs
crates/sandbox-node/: Cargo.toml  index.js
crates/sandbox-node/src/: lib.rs
crates/sandbox-protocol/: Cargo.toml
crates/sandbox-protocol/src/: lib.rs
crates/sandbox/src/: async_bridge.rs  block_storage.rs  config.rs  control.rs  http_flow.rs  http_interception.rs  lib.rs  mounts.rs  network.rs  network_service.rs  rootfs_image.rs  runtime.rs  vfs.rs
crates/sandbox/src/network_service/: dns.rs  egress.rs
docs/: architecture.md  kernel-build.md  libkrun-fork-notes.md  libkrunfw-fork-notes.md  testing-strategy.md
entitlements/: macos-hvf.plist
images/alpine-3.23-agent/: Dockerfile  image.json  package.json
images/alpine-3.23-slim/: Dockerfile  image.json  package.json
images/debian-13-agent/: Dockerfile  image.json  package.json
images/debian-13-slim/: Dockerfile  image.json  package.json
images/ubuntu-26.04-agent/: image.json  package.json
images/ubuntu-26.04-slim/: Dockerfile  image.json  package.json
scripts/: benchmark-e2e-lifecycle.ts  build-host.ts  build-image-rootfs.ts  build-init.ts  build-initrd.ts  build-kernel.ts  build-libkrun-init.ts  build-local-image-artifact.ts  build-rootfs-erofs.ts  build-rootfs-ext4.ts  build-rootfs-qcow2.ts  build-rootfs.ts  check-github-actions-pinned.ts  download-release-artifacts.ts  fixture-cache-keys.ts  image-manifest.ts  image-release-digest.ts  image-release-matrix.ts  image-release-publish-matrix.ts  image-release-version.ts  kernel-artifact-metadata.ts  prepare-image-npm-packages.ts  prepare-npm-packages.ts  publish-image-packages-local.ts  release-artifact-manifest.ts  repro-heavy-apk-network.mjs  sign-host.ts  sign-native.ts  test-disk.ts
scripts/support/: local-host-artifact.ts  local-image-artifact.ts
src/: artifacts.ts  cli.ts  control-codec.ts  control.ts  environment-facts.ts  host-filesystem-tools.ts  host-process.ts  index.ts  launch-options.ts  memory-fs.ts  native.ts  root-storage.ts  spawn-options.ts  sqlite-fs.ts  vfs.ts  wire.ts
tests/artifact/: image-release.test.ts  libkrun-contract.test.ts  linkage-and-signing.test.ts  package-release.test.ts
tests/e2e/: ROADMAP.md  coverage-matrix.md  run.ts
tests/e2e/scenarios/: boot-smoke.test.ts  filesystem-posix-hardening.test.ts  filesystem.test.ts  guest-hardening.test.ts  http-policy.test.ts  http-production-hardening.test.ts  http-request-headers.test.ts  libkrun-contract.test.ts  linkage-and-signing.test.ts  network-policy.test.ts  network.test.ts  rootfs-shaping.test.ts  sandbox-api.test.ts
tests/e2e/support/: artifact.ts  capabilities.ts  evidence.ts  guest-control.ts  http-origin.ts  rootfs.ts
tests/reproducibility/: build-artifacts.test.ts
tests/unit/: control-codec.test.ts  control.test.ts  native-validation.test.ts  public-api.test.ts
