[package]
name = "sandbox_node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.0", default-features = false, features = ["napi6", "async"] }
napi-derive = "3.5.6"
sandbox = { path = "../sandbox" }

[build-dependencies]
napi-build = "2.3.2"
