[package]
name = "sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
krun-devices = { path = "../../deps/libkrun/src/devices", default-features = false, features = ["blk", "net"] }
krun = { package = "libkrun", path = "../../deps/libkrun/src/libkrun", default-features = false, features = ["blk", "net"] }
libc = "0.2"
ipnet = "2.11"
sandbox-protocol = { path = "../sandbox-protocol" }
smoltcp = { version = "0.13.1", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-raw", "socket-tcp", "socket-udp"] }
rustls = "0.23.40"
rama-core = { git = "https://github.com/plabayo/rama", rev = "09ea1a0ff0cd5941ba65421ff5b0f263f6cf5211", version = "0.3.0-rc1" }
rama-http = { git = "https://github.com/plabayo/rama", rev = "09ea1a0ff0cd5941ba65421ff5b0f263f6cf5211", version = "0.3.0-rc1" }

[build-dependencies]
cc = "1.2"

[lib]
crate-type = ["rlib"]
